[gd_scene load_steps=7 format=2]

[ext_resource path="res://imgs/bonusBall.png" type="Texture" id=1]
[ext_resource path="res://fonts/Marmelad-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/bonusBall.gd" type="Script" id=3]
[ext_resource path="res://sounds/bonusBall.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 43.0465

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="bonusBall" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="White" type="Sprite" parent="."]
scale = Vector2( 0.17747, 0.17747 )
texture = ExtResource( 1 )

[node name="setBonusBall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="setBonusBall"]
shape = SubResource( 1 )

[node name="text" type="Label" parent="."]
margin_left = -34.0
margin_top = -23.0
margin_right = 37.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="bonusBallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="setBonusBall" to="." method="_on_setBonusBall_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
